<resources>
    <string name="app_name">FirstTestProject(Button,ActionListener,EditText)</string>
    <string name="btn1">Button 1</string>
    <string name="btn2">Button 2</string>
    <string name="sum">SUM</string>
    <string name="divide">Divide</string>
    <string name="multiply">Multiply</string>
    <string name="diff">Diff</string>
    <string name="input1">Enter 1st Number</string>
    <string name="input2">Enter 2nd Number</string>
    <string name="btnTest">No Button Clicked</string>


</resources>