<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="50dp">

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FF5722"
            android:padding="10dp"
            android:text="@string/btn1"
            android:textColor="#fff"
            android:textSize="20dp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:background="#FF5722"
            android:padding="10dp"
            android:text="@string/btn2"
            android:textColor="#fff"
            android:textSize="20dp" />
    </LinearLayout>
<TextView
    android:id="@+id/buttonClickTest"
    android:layout_width="wrap_content"
    android:hint="@string/btnTest"
    android:textColorHint="#f00"
    android:textSize="20dp"
    android:layout_marginLeft="-200dp"
    android:layout_marginTop="120dp"
    android:layout_height="wrap_content"/>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_marginLeft="-200dp"
    android:orientation="vertical"
    android:layout_marginTop="160dp"
    android:layout_height="wrap_content">

    <EditText
        android:id="@+id/input1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:background="#0f5"
        android:hint="@string/input1"
        android:inputType="numberDecimal"
        android:padding="5dp"
        android:textColorHint="#000"
        android:textSize="15dp" />
    <EditText
        android:id="@+id/input2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="50dp"
        android:background="#0f5"
        android:hint="@string/input2"
        android:inputType="numberDecimal"
        android:padding="5dp"
        android:textColorHint="#000"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/result"
        android:layout_width="wrap_content"
        android:text="Result: "
        android:textSize="20dp"
        android:textColor="#00f"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"/>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/sum"
            android:layout_width="wrap_content"
            android:text="@string/sum"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/diff"
            android:layout_width="wrap_content"
            android:text="@string/diff"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</LinearLayout>
</LinearLayout>